--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js"
   }
 }
