--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "helmet": "^3.18.0",
     "stripe": "^7.1.0"
   },
   "devDependencies": {
