--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^3.0.0"
   },
   "scripts": {
